--- a/WildEMR/Resources/layout/NewPatientScreen.axml
+++ b/WildEMR/Resources/layout/NewPatientScreen.axml
@@ -18,12 +18,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/species_button_spinner_layout">
-            <Button
-                android:text="@string/species_button"
+            <TextView
+                android:text="Species:"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:id="@+id/species_button" />
+                android:layout_weight="1"
+                android:paddingLeft="5.0dp"
+                android:id="@+id/species_text" />
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
@@ -68,22 +70,22 @@
                 android:gravity="bottom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="45.0dp"
-                android:id="@+id/cancel_next_sublayout" >
+                android:layout_marginTop="5.0dp"
+                android:id="@+id/cancel_next_sublayout">
                 <Button
                     android:text="@string/cancel_button"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:layout_weight="1"
                     android:padding="0dp"
-                    android:id="@+id/cancel_button" />
+                    android:id="@+id/cancel_button1" />
                 <Button
                     android:text="@string/next_button"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:layout_weight="1"
                     android:padding="0dp"
-                    android:id="@+id/next_button" />
+                    android:id="@+id/next_button1" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
