--- a/WildEMR/Resources/layout/NewPatientScreen.axml
+++ b/WildEMR/Resources/layout/NewPatientScreen.axml
@@ -10,8 +10,8 @@
         android:id="@+id/new_patient_screen_layout">
         <ImageButton
             android:src="@android:drawable/ic_menu_gallery"
-            android:layout_width="match_parent"
-            android:layout_height="366.0dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:id="@+id/add_photo_button" />
         <LinearLayout
             android:orientation="horizontal"
@@ -60,6 +60,90 @@
                 android:inputType="text"
                 android:id="@+id/edit_id" />
         </LinearLayout>
+      <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/new_patient_sex_layout">
+            <TextView
+                android:text="@string/sex_label"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="9"
+                android:paddingLeft="5.0dp"
+                android:id="@+id/sex_text" />
+            <EditText
+                android:hint="@string/edit_sex_hint"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="text"
+                android:id="@+id/edit_sex" />
+        </LinearLayout>
+      <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/new_patient_color_layout">
+        <TextView
+            android:text="@string/sex_label"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="9"
+            android:paddingLeft="5.0dp"
+            android:id="@+id/color_text" />
+        <EditText
+            android:hint="@string/edit_color_hint"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="text"
+            android:id="@+id/edit_color" />
+      </LinearLayout>
+      <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/new_patient_age_layout">
+        <TextView
+            android:text="@string/age_label"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="9"
+            android:paddingLeft="5.0dp"
+            android:id="@+id/age_text" />
+        <EditText
+            android:hint="@string/edit_age_hint"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="text"
+            android:id="@+id/edit_age" />
+      </LinearLayout>
+      <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/new_patient_location_layout">
+        <TextView
+            android:text="@string/location_label"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="9"
+            android:paddingLeft="5.0dp"
+            android:id="@+id/location_text" />
+        <EditText
+            android:hint="@string/edit_location_hint"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="text"
+            android:id="@+id/edit_location" />
+      </LinearLayout>
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
